--- a/constants.yaml
+++ b/constants.yaml
@@ -8,3 +8,13 @@ airlineName :
   Vistara: [0.20, 0.75]
   Air Asia: [0.25, 0.75]
   Trujet: [0.00, 0.00] 
+
+trainTestSplit:
+  testSize: 0.30
+  randomState: 35
+  CrossValidation: 5
+
+scaling:
+  #scalingFeature: 'sklearn.preprocessing.StandardScaler'   
+  scalingFeature: 'sklearn.preprocessing.MinMaxScaler'   
+  
