--- a/dvc.yaml
+++ b/dvc.yaml
@@ -53,3 +53,9 @@ stages:
     deps:
     - reports\experiment_info.json
     - src\Pipeline\s6_register_model.py
+
+  stage_Transition_Model:
+    cmd: python src\Pipeline\s7_stage_Transition.py
+    deps:
+    - reports\experiment_info.json
+    - src\Pipeline\s7_stage_Transition.py
