--- a/modelsParams.yaml
+++ b/modelsParams.yaml
@@ -6,12 +6,13 @@ model:
       fit_intercept: [true, false]
       max_iter: [1000, 2000]
       tol: [0.0001, 0.001]
-  ridge:
-    model: 'sklearn.linear_model.Ridge'
-    param:
-      alpha: [6, 13]
-  elasticnet:
-    model: 'sklearn.linear_model.ElasticNet'
-    param:
-      alpha: [6, 13]
+
+#  ridge:
+#    model: 'sklearn.linear_model.Ridge'
+#    param:
+#      alpha: [6, 13]
+#  elasticnet:
+#    model: 'sklearn.linear_model.ElasticNet'
+#    param:
+#      alpha: [6, 13]
 
