--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,17 +1,18 @@
 stages:
   
-#  DataIngestion:
-#    cmd: python src/Pipeline/s1_dataIngestion.py
-#    deps:
-#    - src/Pipeline/s1_dataIngestion.py
-#    outs:
-#    - Data/01_RawData/Airline.csv
+  DataIngestion:
+    cmd: python src/Pipeline/s1_dataIngestion.py
+    deps:
+    - src/Pipeline/s1_dataIngestion.py
+    outs:
+    - Data/01_RawData/Airline.csv
   
   DataCleaning:
     cmd: python src/Pipeline/s2_Data_Cleaning.py
     deps:
     - Data/01_RawData/Airline.csv
     - src/Pipeline/s2_Data_Cleaning.py
-#    outs:
-#    - Data/02_CleanedData/CleanedData.csv
+    outs:
+    - Data/02_CleanedData/CleanedData.csv
+
   
