--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,5 +7,21 @@ stages:
     outs:
     - Data/01_RawData/Airline.csv
   
+  DataCleaning:
+    cmd: python src/Pipeline/s2_Data_Cleaning.py
+    deps:
+    - Data/01_RawData/Airline.csv
+    - src/Pipeline/s2_Data_Cleaning.py
+    outs:
+    - Data/02_CleanedData/CleanedData.csv
 
+
+  RemoveOutliers:
+    cmd: python src/Pipeline/s3_RemoveOutliers.py
+    deps:
+    - Data/02_CleanedData/CleanedData.csv
+    - constants.yaml
+    - src/Pipeline/s3_RemoveOutliers.py
+    outs:
+    - Data/03_noOutlierData/noOutlierDataFile.csv
   
