--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,32 +1,12 @@
-name: CI Pipeline
+name: CICD Pipeline
 
 on: push
 
 jobs:
-  CI-Pipeline-test:
-    runs-on: windows-latest
+    CICD Pipeline Test:
+      runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+steps:
+  name: ChecOut Code
+  uses: actions/checkout@v3
 
-      - name: Set up Python environment
-        uses: actions/setup-python@v2
-        with: 
-          python-version: '3.11.7'
-
-      - name: Cache pip dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install Dependencies
-        run: | 
-          pip install -r requirements.txt
-
-      - name: run DVC Pipeline
-        run: | 
-          dvc repro --force
