--- a/mlruns/models/Lasso/version-1/meta.yaml
+++ b/mlruns/models/Lasso/version-1/meta.yaml
@@ -1,8 +1,8 @@
 aliases: []
 creation_timestamp: 1742665537141
-current_stage: None
+current_stage: Archived
 description: ''
-last_updated_timestamp: 1742665537141
+last_updated_timestamp: 1743224999492
 name: Lasso
 run_id: d66192843a6d41c09d6799c83d3a726e
 run_link: ''
