--- a/mlruns/models/Lasso/version-2/meta.yaml
+++ b/mlruns/models/Lasso/version-2/meta.yaml
@@ -1,8 +1,8 @@
 aliases: []
 creation_timestamp: 1742665543001
-current_stage: Production
+current_stage: Archived
 description: ''
-last_updated_timestamp: 1742665670061
+last_updated_timestamp: 1743224977137
 name: Lasso
 run_id: d66192843a6d41c09d6799c83d3a726e
 run_link: ''
