--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -15,4 +15,5 @@ jobs:
         with: 
           python-version: '3.11.7'
 
-
+      - name: Install dependencies
+        runs: pip install -r requirements.txt
