--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,6 +31,6 @@ jobs:
       - name: Run DVC pipeline
         run: dvc repro  # Ensure DVC is initialized and the pipeline is configured correctly.
 
-      - name: Run model tests
-        run: |
-          python -m unittest tests/test_model.py
+      - name: Run Flask app tests
+        if: success()
+        run: python -m unittest tests/test_flask_app.py
