--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,6 +11,7 @@ jobs:
 
     steps:
       - name: Check out code
+        # upload code on github
         uses: actions/checkout@v3
     
       - name: Set up Python environment
