--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -24,14 +24,31 @@ jobs:
           pip install -r requirements.txt
           pip install dvc mlflow  # Install DVC and MLflow explicitly if not in requirements.txt
 
-      - name: Run MLflow UI in background
-        run: |
-          nohup mlflow ui &  # Running MLflow UI in the background.
-          sleep 10  # Wait for the server to start.
 
       - name: Run DVC pipeline
+        env:
+          DAGSHUB_PAT: ${{ secrets.DAGSHUB_PAT }}
         run: dvc repro  # Ensure DVC is initialized and the pipeline is configured correctly.
 
       - name: Run Flask app tests
         if: success()
+        env:
+          DAGSHUB_PAT: ${{ secrets.DAGSHUB_PAT }}
         run: python -m unittest tests/test_flask_app.py
+
+      - name: login to docker
+        if: success()
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build Docker Image
+        if: success()
+        run: |
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/a02:latest .
+
+      - name: Docker Push Image
+        if: success()
+        run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/a02:latest
